trunk/Archive2/0d/d96bf83cb011ad/output
cc1plus: warning: command line option '-std=c90' is valid for C/ObjC but not for C++ [enabled by default]
main.cpp:9:2: error: conflicting declaration 'typedef struct ListNode ListNode'
 }ListNode;
  ^
main.cpp:8:9: error: 'struct ListNode' has a previous declaration as 'struct ListNode'
  struct ListNode *next;       // Pointer show next element type of data struct ListNode
         ^
main.cpp: In function 'int main()':
main.cpp:46:9: error: 'EXIT_SUCCESS' was not declared in this scope
  return EXIT_SUCCESS; 
         ^
